--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -132,7 +132,7 @@
                 <li>FaceBook</li>
             </a>
 
-            <a target="_blank" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20cool%20app%20that%20allows%20me%20to%20create%20and%20send%20encouraging%20words!">
+            <a target="_blank" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20cool%20app%20that%20allows%20me%20to%20create%20and%20send%20encouraging%20words!" data-url="http://cheerups2019.herokuapp.com">
 
 
 
